--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,25 @@
-body {
+*,
+*::before,
+*::aftrer {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  -webkit-box-sizing: inherit;
+  box-sizing: inherit;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 10%;
+  padding: 0;
+  background-color: #f6f8fa;
+  font: 20px "Arial-MTB";
+}
+
+@font-face {
+  font-family: "Arial-MTB";
+  src: local("Arial-MTB"),
+    url(./fonts/Arial-Rounded-MT-Bold.ttf) format("truetype");
 }
