--- a/src/components/styles.css
+++ b/src/components/styles.css
@@ -1,15 +1,5 @@
 @media screen and (max-width: 768px) {
   form {
-    margin-top: 7em;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-  }
-
-  form {
     margin-top: 1.5em;
     display: flex;
     justify-content: center;
@@ -29,7 +19,7 @@
   }
 
   ::placeholder {
-    color: #000;
+    color: #586069;
   }
 
   input:hover,
@@ -39,7 +29,7 @@
   }
 
   .add-url button {
-    padding: 1em 1.5em;
+    padding: 0.7em 1.3em;
     color: #fff;
     background-color: #24292e;
     font: 1em "Arial-MTB";
@@ -76,6 +66,14 @@
     100% {
       transform: translateY(0);
     }
+  }
+
+  .container {
+    margin-top: 1.5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
   }
 }
 
@@ -89,17 +87,17 @@
   }
 
   .add-url input {
-    width: 120%;
+    width: 500px;
     color: #000;
     background-color: #fff;
     border: #24292e solid 4px;
-    padding: 20px 0px 20px 30px;
+    padding: 20px 0px 20px 20px;
     font: 20px "Arial-MTB";
     border-radius: 10px;
   }
 
   ::placeholder {
-    color: #000;
+    color: #586069;
   }
 
   input:hover,
@@ -109,7 +107,7 @@
   }
 
   .add-url button {
-    padding: 1em 1.5em;
+    padding: 0.7em 1.3em;
     color: #fff;
     background-color: #24292e;
     font: 1em "Arial-MTB";
@@ -146,5 +144,12 @@
     100% {
       transform: translateY(0);
     }
+  }
+
+  .container {
+    margin-top: 1.5em;
+    background-color: white;
+    padding: 2%;
+    text-align: left;
   }
 }
